# deepchemography

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_TRAINING.md  VERIFICATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.virtual_documents/notebooks/: autoencoder_example.ipynb
data/: dbaasp_data.csv  gtm_frameset_training.csv
docs/: TRAINING.md
models/autoencoder_converted/: config.pt  vocab.pt
models/autoencoder_v1/: config.pt  vocab.pt
models/peptides/: model_344000.pt
notebooks/: Peptides_WAE.ipynb  Peptides_WAE_DBAASP_HF.ipynb  Sampling_Autoencoder.ipynb  autoencoder_example.ipynb
output/sampling_analysis/peptides_gtm_analysis/: gtm_dbaasp_class_acinetobacter_baumannii.html  gtm_dbaasp_class_bacillus_subtilis.html  gtm_dbaasp_class_candida_albicans.html  gtm_dbaasp_class_enterococcus_faecalis.html  gtm_dbaasp_class_escherichia_coli.html  gtm_dbaasp_class_klebsiella_pneumoniae.html  gtm_dbaasp_class_micrococcus_luteus.html  gtm_dbaasp_class_pseudomonas_aeruginosa.html  gtm_dbaasp_class_salmonella_enterica.html  gtm_dbaasp_class_salmonella_typhimurium.html  gtm_density_wae_altair.html  gtm_modes.json  gtm_wae_model.pkl  summary.txt
scripts/: MODEL_CONVERSION.md  convert_model.py  export_peptide_landscape_bundle.py  train_autoencoder.py  upload_peptide_designer_data.py
src/deepchemography/: __init__.py  script_utils.py  utils.py
src/deepchemography/autoencoder/: __init__.py  config.py  model.py  trainer.py
src/deepchemography/peptides/: __init__.py  api.py  config.py  decoder.py  encoder.py  losses.py  model.py  utils.py  vocab.py
src/deepchemography/shared/: __init__.py  logging.py  losses.py  utils.py
src/deepchemography/smiles/: __init__.py  api.py  config.py  model.py  trainer.py  vocab.py  wae.py  wae_config.py  wae_trainer.py
