[project]
name = "deepchemography"
version = "0.2.0"
description = "Deep learning autoencoders for molecular sequences (SMILES and peptides)"
authors = [
    {name = "Alexander Orlov", email = "aorlov@example.com"},
]
dependencies = [
    "torch",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "rdkit>=2023.3.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "ipykernel",
    "pytest>=7.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
