[project]
name = "deepchemography"
version = "0.2.0"
description = "Deep learning autoencoders for molecular sequences (SMILES and peptides)"
authors = [
    {name = "Alexander Orlov", email = "aorlov@example.com"},
]
dependencies = [
    "torch",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "rdkit>=2023.3.1",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "chemographykit>=0.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "ipykernel",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
