[project]
name = "deepchemography"
version = "0.2.0"
description = "Deep learning autoencoders for molecular sequences (SMILES and peptides)"
authors = [
    {name = "Alexander Orlov", email = "AxelRolov@users.noreply.github.com"},
]
keywords = [
    "deep-learning",
    "molecular-generation",
    "SMILES",
    "autoencoder",
    "peptides",
    "chemoinformatics",
    "drug-discovery",
    "wasserstein-autoencoder",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "rdkit>=2023.3.1",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "chemographykit>=0.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "ipykernel",
    "pytest>=7.0.0",
    "huggingface_hub>=0.24.0",
    "pyarrow>=14.0.0",
    "safetensors>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/AxelRolov/deepchemography"
Repository = "https://github.com/AxelRolov/deepchemography"
Issues = "https://github.com/AxelRolov/deepchemography/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
